--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tiptap/extension-color": "^2.12.0",
     "@tiptap/extension-heading": "^2.12.0",
     "@tiptap/extension-image": "^2.12.0",
