--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@tiptap/extension-text-style": "^2.12.0",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
+    "framer-motion": "^12.12.1",
     "keen-slider": "^6.8.6",
     "quill": "^2.0.3",
     "react": "^19.1.0",
